<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/phoneView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/smsView"/>


    <EditText
        android:id="@+id/smsView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/smstext"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneView"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageview"
        android:onClick="sendMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smsView"
        app:layout_constraintRight_toRightOf="parent" />


    <Button android:id="@+id/smsSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smsSend"
        android:onClick="smsSend"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonView"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button android:id="@+id/callSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/callmsg"
        android:onClick="call"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smsSend"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button android:id="@+id/backView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backView"
        android:onClick="backFunc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/callSend"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button android:id="@+id/CanselView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CanselView"
        android:onClick="canselFunc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backView"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>